# 01.2025

./: README.md
BD/Versão Final/: Prova_BD_VF.vpd  ScriptBD.sql
CG/: Atividade.blend  Ilha-Pintar-Iluminar-Teste.blend  trabalhoN2.md
ComputerGraphics/Blender/01_Excercises/: Scenario_Tree.blend
ComputerGraphics/Blender/01_Excercises/10.04/: 01_Movimentação_Navegação.blend  03_Extrude.blend  1-Exercício-Movimentação e Navegação.blend1  2-Exercício Movimentação e visões.blend
ComputerGraphics/VS_opengl/: CMakeLists.txt  Vectors.cpp  exemplo_glbegin.cpp  main.cpp  matrices.cpp  matrizes.cpp
ComputerNetworks/: 10_DHCP.pkt  1_Simulação1.pkt  2_Simulação2.pkt  3_Simulação3.pkt  4_Residencial0.pkt  5_Residencial1.pkt  6_Sub-Redes.pkt  7_Sub-Redes.pkt  8_AtividadeRevisão.pkt  9_WebServer.pkt
DataStructure/AulaED/src/A_Introduction/: Main.java  MainII.java
DataStructure/AulaED/src/B_VectorCreation/: Main.java  Vector.java  Vetor.java
DataStructure/src/A_Introduction/: Caneta.java  Vetor.java
DataStructure/src/C_SearchAlgorithms/: SearchAlgoritms.java
DataStructure/src/E_Recursion/: Fatorial.java
DataStructure/src/F_LinkedLists/: Node.java
DataStructure/src/G_Stack/: DBconverter.java  Main.java
DataStructure/src/H_Queue/: Comparing.java  FilaSimples.java  QueueInversion.java
DataStructure/src/Prova/: Main.java
Math/docs/: README.md
Math/interface/: CLI.py
Math/src/: Main.py
Math/src/main/: Main.py
Math/src/operations/: Derivatives.py  Integrals.py
Math/src/utils/: Parser.py
Math/tests/: test_derivatives.py  test_integrals.py
(+13 files in other folders)
